--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@ tr:hover td{background:#f9fbf9;}
 .te{background:#dcfce7;color:#166534;}.tm{background:#dbeafe;color:#1e40af;}.td{background:#fef9c3;color:#854d0e;}
 .rt{font-family:var(--mono);text-align:right;font-weight:600;}
 .nm{font-family:var(--mono);text-align:right;}
-.bar-wrap{width:56px;}.bar-bg{width:100%;height:4px;background:#e5e7eb;border-radius:2px;overflow:hidden;}
-.rat-cell{padding-right:14px!important;border-right:1px solid rgba(0,0,0,.07)!important;}
+.bar-wrap{width:68px;flex-shrink:0;}.bar-bg{width:100%;height:5px;background:#e5e7eb;border-radius:3px;overflow:hidden;}.bar-fill{height:100%;border-radius:3px;}
+.rat-cell{padding:4px 14px 4px 8px!important;border-right:1px solid rgba(0,0,0,.07)!important;}
 .bar-fill{height:100%;border-radius:2px;}.bar-g{background:var(--pos);}.bar-r{background:var(--neg);}
 tr.selected-row td{background:#f0f7f3!important;}
 tr.selected-row .emd-nm{color:var(--green);font-weight:700;}
@@ -684,6 +684,47 @@ function sortData(tab,col){
   else{sortState[tab].col=col;sortState[tab].dir=-1;}
   renderCurrentTab();
 }
+
+// ── 추세 배지 & 스파크라인 ──
+function trendBadge(cagr){
+  if(cagr===null||cagr===undefined)return'<span style="color:#bbb;font-size:11px">-</span>';
+  const up=cagr>0;
+  const strong=Math.abs(cagr)>=1;
+  const arrow=up?'▲':'▼';
+  const col=up?(strong?'#16a34a':'#65a30d'):(strong?'#dc2626':'#f97316');
+  const bg=up?(strong?'rgba(22,163,74,.1)':'rgba(101,163,13,.1)'):(strong?'rgba(220,38,38,.1)':'rgba(249,115,22,.1)');
+  return`<span style="display:inline-flex;align-items:center;gap:3px;padding:2px 7px;border-radius:10px;background:${bg};color:${col};font-size:11px;font-weight:700;font-family:var(--mono)">${arrow} ${Math.abs(cagr).toFixed(2)}%</span>`;
+}
+
+function sparkline(vals,rate5){
+  const w=82,h=28,pad=3;
+  const valid=vals.filter(v=>v!==null&&v!==undefined);
+  if(valid.length<2)return'<svg width="'+w+'" height="'+h+'"></svg>';
+  const mn=Math.min(...vals.map(v=>v??Infinity));
+  const mx=Math.max(...vals.map(v=>v??-Infinity));
+  const rng=mx-mn||1;
+  const xs=vals.map((_,i)=>pad+(i/(vals.length-1))*(w-pad*2));
+  const ys=vals.map(v=>v===null?null:h-pad-(v-mn)/rng*(h-pad*2));
+  // polyline points (skip nulls)
+  let pts='';let areas='';let px=null,py=null;
+  const segs=[];let cur=[];
+  vals.forEach((v,i)=>{
+    if(v!==null&&v!==undefined){cur.push([xs[i],ys[i]]);}
+    else if(cur.length){segs.push(cur);cur=[];}
+  });
+  if(cur.length)segs.push(cur);
+  const col=rate5>5?'#16a34a':rate5>0?'#65a30d':rate5>-5?'#f97316':'#dc2626';
+  const lines=segs.map(seg=>{
+    const p=seg.map(([x,y])=>`${x.toFixed(1)},${y.toFixed(1)}`).join(' ');
+    return`<polyline points="${p}" fill="none" stroke="${col}" stroke-width="1.8" stroke-linejoin="round" stroke-linecap="round"/>`;
+  }).join('');
+  // dots at first and last valid
+  const first=vals.findIndex(v=>v!==null);
+  const last=vals.length-1-[...vals].reverse().findIndex(v=>v!==null);
+  const dots=[first,last].filter((v,i,a)=>a.indexOf(v)===i).map(i=>`<circle cx="${xs[i].toFixed(1)}" cy="${ys[i].toFixed(1)}" r="2.2" fill="${col}"/>`).join('');
+  return`<svg width="${w}" height="${h}" style="overflow:visible">${lines}${dots}</svg>`;
+}
+
 function sorted(tab){
   const{col,dir}=sortState[tab];
   return D.slice().sort((a,b)=>{
@@ -1140,8 +1181,7 @@ function renderPop(){
       <td class="nm">${d.p21.toLocaleString()}</td>
       <td class="nm" style="font-weight:600">${d.p25.toLocaleString()}</td>
       <td class="rt ${rc(d.pdiff)}">${d.pdiff>0?'+':''}${d.pdiff.toLocaleString()}</td>
-      <td class="rt ${rc(d.cagr)}">${fmt(d.cagr,2)}%</td>
-      <td><div class="bar-wrap"><div class="bar-bg"><div class="bar-fill ${d.cagr>=0?'bar-g':'bar-r'}" style="width:${Math.round(d.p25/maxP*100)}%"></div></div></div></td>
+      <td style="text-align:center">${trendBadge(d.cagr)}</td>
     </tr>`).join('');
   document.getElementById('tab-pop').innerHTML=`
   <div class="kpi-grid c4">
@@ -1154,8 +1194,8 @@ function renderPop(){
   <div style="overflow-x:auto"><table><thead><tr>
     <th class="left" style="width:26px">#</th>${thSort('pop','nm','읍면동','left')}
     ${thSort('pop','p21','2021')}${thSort('pop','p25','2025')}
-    ${thSort('pop','pdiff','증감')}${thSort('pop','cagr','연평균')}
-    <th>추세</th>
+    ${thSort('pop','pdiff','증감')}
+    ${thSort('pop','cagr','추세','center')}
   </tr></thead><tbody>${rows}</tbody></table></div></div>`;
   highlightRow(selectedNm);
 }
@@ -1207,10 +1247,14 @@ function renderMig(){
   const rows=sorted('mig').filter(d=>!selectedNm||d.nm===selectedNm).map((d,i)=>`
     <tr data-nm="${d.nm}" class="${selectedNm===d.nm?'selected-row':''}">
       <td class="rnk">${i+1}</td><td>${nmCell(d)}</td>
-      <td class="nm">${d.ji24.toLocaleString()}</td><td class="nm">${d.jo24.toLocaleString()}</td>
+      <td class="nm" style="font-size:10px;color:#888">${d.ji21.toLocaleString()}</td>
+      <td class="nm" style="font-size:10px;color:#888">${d.jo21.toLocaleString()}</td>
+      <td class="rt ${rc(d.n21)}" style="font-size:10px;color:#888">${d.n21>0?'+':''}${d.n21.toLocaleString()}</td>
+      <td class="rt ${rc(d.nmr21)}" style="font-size:10px;color:#888">${fmt(d.nmr21,1)}‰</td>
+      <td class="nm" style="font-weight:600">${d.ji24.toLocaleString()}</td>
+      <td class="nm" style="font-weight:600">${d.jo24.toLocaleString()}</td>
       <td class="rt ${rc(d.n24)}" style="font-weight:700">${d.n24>0?'+':''}${d.n24.toLocaleString()}</td>
-      <td class="rt ${rc(d.nmr24)}">${fmt(d.nmr24,1)}‰</td>
-      <td class="rt ${rc(d.n21)}">${d.n21>0?'+':''}${d.n21.toLocaleString()}</td>
+      <td class="rt ${rc(d.nmr24)}" style="font-weight:600">${fmt(d.nmr24,1)}‰</td>
     </tr>`).join('');
   document.getElementById('tab-mig').innerHTML=`
   <div class="kpi-grid c4">
@@ -1221,10 +1265,13 @@ function renderMig(){
   </div>
   <div class="twrap"><div class="thead-row"><span class="th-title">읍면동별 순이동인구</span><span class="th-cnt">${data.length}개</span></div>
   <div style="overflow-x:auto"><table><thead><tr>
-    <th class="left" style="width:26px">#</th>${thSort('mig','nm','읍면동','left')}
-    ${thSort('mig','ji24','전입(24)')}${thSort('mig','jo24','전출(24)')}
-    ${thSort('mig','n24','순이동(24)')}${thSort('mig','nmr24','순이동률(‰)')}
-    ${thSort('mig','n21','순이동(21)')}
+    <th class="left" style="width:26px;vertical-align:middle" rowspan="2">#</th>
+    <th class="left" style="vertical-align:middle" rowspan="2">읍면동</th>
+    <th colspan="4" style="text-align:center;background:rgba(0,0,0,.04);font-size:10px;color:#888;border-bottom:1px solid #e5e7eb">2021년</th>
+    <th colspan="4" style="text-align:center;background:rgba(37,99,235,.06);font-size:10px;border-bottom:1px solid #e5e7eb">2024년</th>
+  </tr><tr>
+    ${thSort('mig','ji21','전입')}${thSort('mig','jo21','전출')}${thSort('mig','n21','순이동')}${thSort('mig','nmr21','이동률(‰)')}
+    ${thSort('mig','ji24','전입')}${thSort('mig','jo24','전출')}${thSort('mig','n24','순이동')}${thSort('mig','nmr24','이동률(‰)')}
   </tr></thead><tbody>${rows}</tbody></table></div></div>`;
   highlightRow(selectedNm);
 }
@@ -1243,6 +1290,7 @@ function renderFg(){
       <td class="rt ${rc(d.fdiff)}">${d.fdiff>0?'+':''}${d.fdiff.toLocaleString()}</td>
       <td class="rt ${rc(d.frate5)}">${fmt(d.frate5,1)}%</td>
       <td class="rt ${rc(d.frate1y)}">${fmt(d.frate1y,1)}%</td>
+      <td style="padding:4px 8px">${sparkline([d.f20,d.f21,d.f22,d.f23,d.f24],d.frate5)}</td>
     </tr>`).join('');
   document.getElementById('tab-fg').innerHTML=`
   <div class="kpi-grid c4">
@@ -1257,6 +1305,7 @@ function renderFg(){
     ${thSort('fg','f20','\'20')}${thSort('fg','f22','\'22')}
     ${thSort('fg','f24','\'24')}
     ${thSort('fg','fdiff','5년 증감')}${thSort('fg','frate5','5년 증감률')}${thSort('fg','frate1y','전년 대비')}
+    <th style="min-width:80px">추세('20→'24)</th>
   </tr></thead><tbody>${rows}</tbody></table></div></div>`;
   highlightRow(selectedNm);
 }
@@ -1283,7 +1332,7 @@ function renderAge(){
   document.getElementById('tab-age').innerHTML=`
   <div class="kpi-grid c5">
     ${kcard('유아 (0~6세)',`${(t유아/tot*100).toFixed(1)}%`,t유아.toLocaleString()+'명')}
-    ${kcard('유소년 (7~18)',`${(t유소/tot*100).toFixed(1)}%`,t유소.toLocaleString()+'명')}
+    ${kcard('청소년 (15세 미만)',`${(t유소/tot*100).toFixed(1)}%`,t유소.toLocaleString()+'명')}
     ${kcard('청년 (19~34)',`${(t청년/tot*100).toFixed(1)}%`,t청년.toLocaleString()+'명')}
     ${kcard('생산가능 (15~64)',`${(t생산/tot*100).toFixed(1)}%`,t생산.toLocaleString()+'명')}
     ${kcard('고령 (65세+)',`<span class="${(t노인/tot*100)>=20?'neg':''}">${(t노인/tot*100).toFixed(1)}%</span>`,t노인.toLocaleString()+'명')}
@@ -1291,7 +1340,7 @@ function renderAge(){
   <div class="twrap"><div class="thead-row"><span class="th-title">읍면동별 연령별 인구구조 (2025)</span><span class="th-cnt">${data.length}개 지역 · 비율(%)</span></div>
   <div style="overflow-x:auto"><table><thead><tr>
     <th class="left" style="width:26px">#</th>${thSort('age','nm','읍면동','left')}
-    ${thSort('age','유아율25','유아%')}${thSort('age','유소율25','유소년%')}
+    ${thSort('age','유아율25','유아%')}${thSort('age','유소율25','청소년%')}
     ${thSort('age','청년율25','청년%')}${thSort('age','생산율25','생산가능%')}
     ${thSort('age','노인율25','고령%')}
   </tr></thead><tbody>${rows}</tbody></table></div></div>`;
@@ -1308,11 +1357,14 @@ function renderBiz(){
   const rows=sorted('biz').filter(d=>!selectedNm||d.nm===selectedNm).map((d,i)=>`
     <tr data-nm="${d.nm}" class="${selectedNm===d.nm?'selected-row':''}">
       <td class="rnk">${i+1}</td><td>${nmCell(d)}</td>
-      <td class="nm">${(d.biz21||0).toLocaleString()}</td>
+      <td class="nm" style="font-size:10px;color:#888">${(d.biz21||0).toLocaleString()}</td>
       <td class="nm" style="font-weight:600">${(d.biz23||0).toLocaleString()}</td>
       <td class="rt ${rc(d.biz_cagr)}">${fmt(d.biz_cagr,2)}%</td>
-      <td class="nm">${(d.emp23||0).toLocaleString()}</td>
-      <td class="nm">${(d.new23||0).toLocaleString()}</td>
+      <td class="nm" style="font-size:10px;color:#888">${(d.emp21||0).toLocaleString()}</td>
+      <td class="nm" style="font-weight:600">${(d.emp23||0).toLocaleString()}</td>
+      <td class="rt ${rc(d.emp_cagr)}">${fmt(d.emp_cagr,2)}%</td>
+      <td class="nm" style="font-size:10px;color:#888">${(d.new21||0).toLocaleString()}</td>
+      <td class="nm" style="font-weight:600">${(d.new23||0).toLocaleString()}</td>
       <td class="rt ${rc(d.new_cagr)}">${fmt(d.new_cagr,2)}%</td>
     </tr>`).join('');
   document.getElementById('tab-biz').innerHTML=`
@@ -1324,11 +1376,15 @@ function renderBiz(){
   </div>
   <div class="twrap"><div class="thead-row"><span class="th-title">읍면동별 산업·사업체</span><span class="th-cnt">${data.length}개</span></div>
   <div style="overflow-x:auto"><table><thead><tr>
-    <th class="left" style="width:26px">#</th>${thSort('biz','nm','읍면동','left')}
-    ${thSort('biz','biz21','사업체\'21')}${thSort('biz','biz23','사업체\'23')}
-    ${thSort('biz','biz_cagr','증감률')}
-    ${thSort('biz','emp23','종사자\'23')}
-    ${thSort('biz','new23','창업\'23')}${thSort('biz','new_cagr','창업률')}
+    <th class="left" style="width:26px;vertical-align:middle" rowspan="2">#</th>
+    <th class="left" style="vertical-align:middle" rowspan="2">읍면동</th>
+    <th colspan="3" style="text-align:center;background:rgba(0,0,0,.04);font-size:10px;border-bottom:1px solid #e5e7eb">사업체수</th>
+    <th colspan="3" style="text-align:center;background:rgba(37,99,235,.06);font-size:10px;border-bottom:1px solid #e5e7eb">종사자수</th>
+    <th colspan="3" style="text-align:center;background:rgba(22,163,74,.06);font-size:10px;border-bottom:1px solid #e5e7eb">창업기업</th>
+  </tr><tr>
+    ${thSort('biz','biz21','`21')}${thSort('biz','biz23','`23')}${thSort('biz','biz_cagr','증감률')}
+    ${thSort('biz','emp21','`21')}${thSort('biz','emp23','`23')}${thSort('biz','emp_cagr','증감률')}
+    ${thSort('biz','new21','`21')}${thSort('biz','new23','`23')}${thSort('biz','new_cagr','증감률')}
   </tr></thead><tbody>${rows}</tbody></table></div></div>`;
   highlightRow(selectedNm);
 }
@@ -1354,7 +1410,7 @@ function buildDetailHTML(d){
   ];
   const ageRows=[
     row('유아인구 비율 (0~6세)',`${pf(d.유아율25)} (${nf(d.유아25)}명)`,`${ff(d.유아율25-d.유아율21,1)}%p`,'최근 5개년'),
-    row('유소년인구 비율 (7~18세)',`${pf(d.유소율25)} (${nf(d.유소25)}명)`,`${ff(d.유소율25-d.유소율21,1)}%p`,'최근 5개년'),
+    row('청소년인구 비율 (15세 미만)',`${pf(d.유소율25)} (${nf(d.유소25)}명)`,`${ff(d.유소율25-d.유소율21,1)}%p`,'최근 5개년'),
     row('청년인구 비율 (19~34세)',`${pf(d.청년율25)} (${nf(d.청년25)}명)`,`${ff(d.청년율25-d.청년율21,1)}%p`,'최근 5개년'),
     row('생산가능인구 비율 (15~64)',`${pf(d.생산율25)} (${nf(d.생산25)}명)`,`${ff(d.생산율25-d.생산율21,1)}%p`,'최근 5개년'),
     row('고령인구 비율 (65세+)',`<span style="${d.노인율25>=20?'color:#dc2626;font-weight:700':d.노인율25>=14?'color:#b45309':''}">${pf(d.노인율25)}</span> (${nf(d.노인25)}명)`,`${ff(d.노인율25-d.노인율21,1)}%p`,'최근 5개년'),
@@ -5555,11 +5611,11 @@ SAFETY_R.forEach(r=>SAFETY_M[r[0]]={
 const pct=v=>v===null||v===undefined?'<span style="color:#bbb">-</span>':`${v.toFixed(1)}%`;
 const mtr=v=>v===null||v===undefined?'<span style="color:#bbb">-</span>':`${v.toLocaleString()}m`;
 const ratColor=v=>{
-  if(v===null||v===undefined)return'#bbb';
-  if(v>=80)return'#1a6b3c';
-  if(v>=60)return'#2d8a55';
-  if(v>=40)return'#b45309';
-  return'#dc2626';
+  if(v===null||v===undefined)return'#d1d5db';
+  if(v>=80)return'#16a34a';
+  if(v>=60)return'#65a30d';
+  if(v>=40)return'#f59e0b';
+  return'#ef4444';
 };
 const ratBar=v=>{
   if(v===null||v===undefined)return'<div class="bar-wrap"><div class="bar-bg"><div class="bar-fill bar-g" style="width:0%"></div></div></div>';
@@ -5597,7 +5653,7 @@ function renderEdu(sub='all'){
       <td class="rnk">${i+1}</td>
       <td><div class="emd-nm" onclick="selectFromTable('${d.nm}')">${d.nm}<span class="tag ${d.tp==='읍'?'te':d.tp==='면'?'tm':'td'}">${d.tp}</span></div><div class="emd-sub">${d.rg}</div></td>
       ${sub==='all'?`<td class="nm" style="font-weight:600">${tot||0}</td>`:`<td class="nm">${pub||0}</td><td class="nm">${prv||0}</td><td class="nm" style="font-weight:600">${tot||0}</td>`}
-      <td class="rat-cell"><div style="display:flex;align-items:center;gap:5px"><span class="rt ${ratCls}" style="min-width:42px">${pct(rat)}</span>${ratBar(rat)}</div></td>
+      <td class="rat-cell"><div style="display:flex;flex-direction:column;align-items:flex-end;gap:3px"><span class="rt ${ratCls}" style="font-size:12px;letter-spacing:-.3px">${pct(rat)}</span>${ratBar(rat)}</div></td>
       <td class="nm">${mtr(dst)}</td>
     </tr>`;
   };
@@ -5686,7 +5742,7 @@ function renderCare(sub='all'){
       <td><div class="emd-nm" onclick="selectFromTable('${d.nm}')">${d.nm}<span class="tag ${d.tp==='읍'?'te':d.tp==='면'?'tm':'td'}">${d.tp}</span></div><div class="emd-sub">${d.rg}</div></td>
       ${sub==='all'?`<td class="nm">${d.k_tot||0}</td><td class="nm">${d.c_tot||0}</td>`:`<td class="nm">${pub||0}</td><td class="nm">${prv||0}</td>`}
       <td class="nm" style="font-weight:600">${tot||0}</td>
-      <td class="rat-cell"><div style="display:flex;align-items:center;gap:5px"><span class="rt ${ratCls}" style="min-width:42px">${pct(rat)}</span>${ratBar(rat)}</div></td>
+      <td class="rat-cell"><div style="display:flex;flex-direction:column;align-items:flex-end;gap:3px"><span class="rt ${ratCls}" style="font-size:12px;letter-spacing:-.3px">${pct(rat)}</span>${ratBar(rat)}</div></td>
       <td class="nm">${mtr(dst)}</td>
     </tr>`;
   };
